Nav alignment fixes

--- a/app/assets/stylesheets/navigation.css.sass
+++ b/app/assets/stylesheets/navigation.css.sass
@@ -65,6 +65,9 @@
 
       .cs-nav-item
         margin: 0 0 0 $base
+        font-weight: 500
+        font-size: 17/14*$base
+        line-height: 14px
 
         &:before
           display: none
@@ -83,6 +86,9 @@
       margin: 0 0 0 (10 / 14 * $base)
       padding: 0 0 0 (10 / 14 * $base)
       color: $black
+
+      a
+        color: $black
 
       &:before
         display: none
